tests/e2e/null_map.story
a = null
b = {} as Map[any,any]
c = b[a]
